# archived-nsh_sfc

./: .gitreview  Makefile  README.md  RELEASE.md  notes
doxygen/: Makefile  doxygen.cfg
nsh-plugin/: .gitignore  Makefile.am  README-build  README.md  build.sh  configure  configure.ac
nsh-plugin-api/: Makefile.am  configure.ac
nsh-plugin/java/: Makefile.am  configure.ac  pom.xml
nsh-plugin/java/jvpp/: jvpp_nsh.c  jvpp_nsh.h  pom.xml
nsh-plugin/java/jvpp/test/: JVppNshTest.java  NshFutureApiTest.java
nsh-plugin/nsh/: nsh.api  nsh.c  nsh.h  nsh_all_api_h.h  nsh_msg_enum.h  nsh_output.c  nsh_packet.h  nsh_pop.c  nsh_test.c
nsh-plugin/nsh-md2-ioam/: md2_ioam_transit.c  nsh_md2_ioam.c  nsh_md2_ioam_api.c  nsh_md2_ioam_trace.c  nsh_md2_ioam_util.h
nsh-plugin/nsh-md2-ioam/export-nsh-md2-ioam/: nsh_md2_ioam_export.c
nsh-plugin/packaging/: .gitignore
nsh-plugin/packaging/deb/debian/: control  rules
nsh-plugin/packaging/rpm/: .gitignore  vpp-nsh-plugin.spec
nsh-plugin/packaging/scripts/: generate-deb-changelog
nsh-plugin/vpp-api/: nsh_all_api_h.h  nsh_msg_enum.h
scripts/ci/: verify.sh
vagrant/: cleanup_vpp_plugin_dev_env.sh  setup_vpp_plugin_dev_env.sh
